--- a/opmaak/opmaakindex.css
+++ b/opmaak/opmaakindex.css
@@ -13,6 +13,16 @@ h1{
 	  font-style: normal;
 }
 
+h3{
+	color: white;
+	font-family: sans-serif;
+	text-transform: uppercase;
+	text-align: center;
+	  font-family: "Aldrich", sans-serif;
+ 	  font-weight: 400;
+	  font-style: normal;
+}
+
 img{
 	width: 40%;
 	border-style: solid;
@@ -25,6 +35,11 @@ img{
 }
 
 .tweedefoto{
+	text-align: center;
+	margin-top: 50px;
+}
+
+.derdefoto{
 	text-align: center;
 	margin-top: 50px;
 }
